--- a/src/api/views/styles/global.css
+++ b/src/api/views/styles/global.css
@@ -11,7 +11,9 @@ html {
   --bg-color: #f0efef;
   --text-color: rgb(68, 68, 68);
   font-family: "Poppins", sans-serif;
-  background: #f0efef;
+  background: var(--bg-color);
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 @media (max-width: 992px) {
@@ -35,18 +37,19 @@ input {
   all: unset;
   display: block;
   font-family: "Poppins", sans-serif;
-  border: 2px solid var(--text-color);
+  border: 1px solid #cbd1db;
   border-radius: 5px;
   margin: 0.5rem 0;
-  padding: 0.3rem 0.5rem;
+  padding: 0.5rem 0.5rem;
   font-size: 0.9rem;
   width: calc(100% - 1rem - 4px);
   display: inline-block;
+  background-color: #f6f9fd;
 }
 input:active,
 input:hover,
 input:focus {
-  border: 2px solid var(--cta-color);
+  border: 1px solid var(--cta-color);
   transition: all 0.1s ease-in-out;
 }
 
@@ -55,7 +58,6 @@ button {
   all: unset;
   font-family: "Poppins", sans-serif;
   border-radius: 5px;
-  margin: 1rem 0;
   padding: 0.4rem 0.6rem;
   background-color: var(--cta-color);
   color: white;
@@ -67,6 +69,15 @@ button {
 button:hover {
   background-color: rgba(104, 138, 255, 0.3);
   color: var(--cta-color);
+  transition: all 0.1s ease-in-out;
+}
+button.danger {
+  background-color: #ff5252;
+  color: white;
+}
+button.danger:hover {
+  background-color: #fac9c9;
+  color: #ff5252;
   transition: all 0.1s ease-in-out;
 }
 
@@ -115,8 +126,4 @@ h4 {
   font-family: "Poppins", sans-serif;
   color: black;
   margin: 0.25rem 0;
-}
-
-.d-none {
-  display: none;
 }
