--- a/src/api/views/styles/sidemenu.css
+++ b/src/api/views/styles/sidemenu.css
@@ -1,8 +1,8 @@
 .sidemenu {
   border-right: 1px solid #ccc;
-  height: 100vh;
-  overflow-y: hidden;
-  position: static;
+  position: fixed;
+  top: 4rem;
+  height: calc(100vh - 4.5rem);
 }
 ul {
   list-style: none;
